# linak-mqtt

./: .gitignore  README.md  pyproject.toml
deploy/: deploy.sh
python/: __main__.py  linak-desk-control.py  linak_desk_control.py  test.py  test_cancel.py  time_utils.py
systemd/: linak-mqtt.service
udev/: 10-linak-cbd6s.rules  5-root-hub.rules
